--- a/apps/files/css/files.scss
+++ b/apps/files/css/files.scss
@@ -601,7 +601,7 @@ html.ie8 .column-mtime .selectedActions {
 #fileList a.action {
 	display: inline;
 	padding: 17px 8px;
-	line-height: 50px;
+	line-height: 44px;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	opacity: 0;
@@ -776,12 +776,14 @@ html.ie8 #controls .button.new {
 }
 
 .newFileMenu {
-	font-weight: 300;
-	top: 100%;
 	margin-top: 4px;
 	min-width: 100px;
-	margin-left: 7px;
 	z-index: 1001;
+	left: calc(50% - 87px);
+}
+
+.newFilemenu:after {
+	left: 45px;
 }
 
 .newFileMenu .filenameform {
