--- a/core/css/apps.scss
+++ b/core/css/apps.scss
@@ -561,6 +561,13 @@ em {
 	}
 }
 
+.menu,
+.bubble,
+.app-navigation-entry-menu,
+.popovermenu {
+	box-shadow: 0 1px 10px $color-box-shadow;
+}
+
 .bubble,
 .app-navigation-entry-menu,
 .popovermenu {
@@ -572,11 +579,6 @@ em {
 	margin: 5px;
 	margin-top: -5px;
 	right: 0;
-	-webkit-filter: drop-shadow(0 0 5px $color-box-shadow);
-	-moz-filter: drop-shadow(0 0 5px $color-box-shadow);
-	-ms-filter: drop-shadow(0 0 5px $color-box-shadow);
-	-o-filter: drop-shadow(0 0 5px $color-box-shadow);
-	filter: drop-shadow(0 0 5px $color-box-shadow);
 	display: none;
 
 	&:after {
