--- a/core/css/header.scss
+++ b/core/css/header.scss
@@ -406,10 +406,9 @@ nav {
 	}
 	a {
 		display: block;
-		height: 40px;
 		color: $color-main-text;
 		opacity: .5;
-		padding: 10px 12px 0;
+		padding: 12px;
 		-ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=50)';
 		box-sizing: border-box;
 		img {
@@ -483,11 +482,6 @@ nav {
 		top: 32px;
 		transform: translateX(-50%);
 		padding: 4px 10px;
-		-webkit-filter: drop-shadow(0 0 5px rgba(150, 150, 150, .75));
-		-moz-filter: drop-shadow(0 0 5px rgba(150, 150, 150, .75));
-		-ms-filter: drop-shadow(0 0 5px rgba(150, 150, 150, .75));
-		-o-filter: drop-shadow(0 0 5px rgba(150, 150, 150, .75));
-		filter: drop-shadow(0 0 5px rgba(150, 150, 150, .75));
 	}
 
 	li:hover span {
